MealEntryDao is fully covered by tests and did some general cleanup/improvements in FoodItemDaoTest